# totris

./: README.md  dune  dune-project  totris.opam
_build/: .db  .digest-db  log
_build/default/: totris.dune-package  totris.install
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/lib/: totris.cma  totris.cmxa  totris.cmxs
_build/default/lib/.merlin-conf/: lib-totris
_build/default/lib/.totris.objs/byte/: totris.cmi  totris.cmo  totris.cmt
_build/default/lib/.totris.objs/native/: totris.cmx
_build/default/test/.merlin-conf/: exe-totris
_build/default/test/.totris.eobjs/byte/: dune__exe__Totris.cmi  dune__exe__Totris.cmti
_build/default/test/.totris.eobjs/native/: dune__exe__Totris.cmx
_build/install/default/lib/totris/: META  dune-package  opam
lib/: dune
test/: dune
