(lang dune 3.7)

(name totris)

(generate_opam_files true)

(source
 (github Varun-Sethu/totris))

(authors "Varun Sethu")

(maintainers "Varun Sethu")

(package
 (name totris)
 (synopsis "A very shoddy tetris clone :)")
 (description "A very shoddy tetris clone :)")
 (depends ocaml dune)
 (tags
  (tetris)))